--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -18,7 +18,8 @@
     "react-native-web": "~0.19.6",
     "@expo/webpack-config": "^19.0.0",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "@types/react": "~18.2.14",
+    "@react-native-picker/picker": "2.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
