--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "nodemon backend.ts"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
