--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -1,38 +1,78 @@
 version: '3.3'
 
 services:
-  db:
-    image: mysql:8.0
-    ports: ["3306:3306"]
+  db_orthanc:
+    image: mariadb:10.6-focal
+    # ports: ["3306:3306"]
     command:
       [
         mysqld,
-        --default-authentication-plugin=mysql_native_password,
+        --default-authentication-plugin=ed25519,
         --log-bin-trust-function-creators=1,
       ]
-    volumes: ["index:/var/lib/mysql:Z"]
+    volumes: ["index_orthanc:/var/lib/mariadb:Z"]
+    networks:
+      - orthanc-db
     environment:
-      MYSQL_PASSWORD: foo
-      MYSQL_USER: test-user
-      MYSQL_DATABASE: orthanc
-      MYSQL_ROOT_PASSWORD: foo-root
+      MARIADB_PASSWORD: orthanc_pass
+      MARIADB_USER: orthanc
+      MARIADB_DATABASE: orthanc
+      MARIADB_ROOT_PASSWORD: foo-root
+  db_backend:
+    image: mariadb:10.6-focal
+    networks:
+      - backend-db
+    command:
+      [
+        mysqld,
+        --default-authentication-plugin=ed25519,
+        --log-bin-trust-function-creators=1,
+      ]
+    volumes: ["index_backend:/var/lib/mariadb:Z"]
+    environment:
+      MARIADB_PASSWORD: secure_miv
+      MARIADB_USER: miv
+      MARIADB_DATABASE: miv
+      MARIADB_ROOT_PASSWORD: miv-root
   orthanc:
     image: osimis/orthanc:23.11.0
-    depends_on: [db]
+    depends_on:
+      - db_orthanc
     ports: 
       - "8042:8042"
       - "4242:4242"
+    networks:
+      - orthanc-db
     environment:
-      ORTHANC__MYSQL__HOST: db
-      ORTHANC__MYSQL__USERNAME: test-user
+      ORTHANC__MYSQL__HOST: db_orthanc
+      ORTHANC__MYSQL__USERNAME: orthanc
       ORTHANC__MYSQL__DATABASE: orthanc
-      ORTHANC__MYSQL__PASSWORD: foo
+      ORTHANC__MYSQL__PASSWORD: orthanc_pass
       # ORTHANC__REGISTERED_USERS: |
       #   {"demo": "demo"}
       ORTHANC__AUTHENTICATION_ENABLED: "false"
       VERBOSE_ENABLED: "true"
     # OSIMIS_WEB_VIEWER1_PLUGIN_ENABLED: "false"
+  backend:
+    build: 
+      context: ..
+      dockerfile: Infra/dockerfile_backend
+    image: backend
+    # restart: always
+    ports:
+      - "3000:3000"
+    networks:
+      - backend-db
+    volumes:
+      - ../Backend:/app
+
 
 volumes:
   storage:
-  index:
+  index_orthanc:
+  index_backend:
+networks:
+  orthanc-db:
+    driver: bridge
+  backend-db:
+    driver: bridge
