--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,10 +3,14 @@
     "start": "nodemon backend.ts"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mariadb": "^3.2.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
