--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,10 +7,14 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.2",
-    "ts-node": "^10.9.1"
+    "nodemailer": "^6.9.7",
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5"
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7"
   }
 }
