--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -3,7 +3,6 @@ version: '3.3'
 services:
   db_orthanc:
     image: mariadb:10.6-focal
-    # ports: ["3306:3306"]
     command:
       [
         mysqld,
@@ -19,10 +18,10 @@ services:
       MARIADB_DATABASE: orthanc
       MARIADB_ROOT_PASSWORD: foo-root
 
-  db_backend:
+  db_auth:
     image: mariadb:10.6-focal
     networks:
-      - backend-db
+      - auth-db
     command:
       [
         mysqld,
@@ -33,6 +32,7 @@ services:
       - "index_backend:/var/lib/mariadb:Z"
       - "./initdb.sql:/docker-entrypoint-initdb.d/initdb.sql"
     environment:
+    # TODO: get these from env file
       MARIADB_PASSWORD: secure_miv
       MARIADB_USER: miv
       MARIADB_DATABASE: miv
@@ -57,7 +57,21 @@ services:
       ORTHANC__AUTHENTICATION_ENABLED: "false"
       VERBOSE_ENABLED: "true"
     # OSIMIS_WEB_VIEWER1_PLUGIN_ENABLED: "false"
-    
+
+  auth:
+    build: 
+      context: ..
+      dockerfile: Infra/dockerfile_backend
+    image: backend
+    env_file:
+      - .backend.env
+    networks:
+      - kong-net
+      - auth-db
+    volumes:
+      - ../Backend:/app
+    command: nodemon /app/microservices/auth.ts
+  
   backend:
     build: 
       context: ..
@@ -69,9 +83,64 @@ services:
     ports:
       - "3000:3000"
     networks:
-      - backend-db
+      - kong-net
     volumes:
       - ../Backend:/app
+    command: nodemon /app/microservices/backend.ts
+
+  # kong-db:
+  #   image: postgres:13
+  #   networks:
+  #     - kong-net
+  #   environment:
+  #     - "POSTGRES_USER=kong"
+  #     - "POSTGRES_DB=kong"
+  #     - "POSTGRES_PASSWORD=kongpass"
+
+  # kong-migrations:
+  #   image: kong:3.5
+  #   environment:
+  #     - "KONG_DATABASE=postgres"
+  #     - "KONG_PG_HOST=kong-db" 
+  #     - "KONG_PG_USER=kong"
+  #     - "KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yml"
+  #     - "KONG_PG_PASSWORD=kongpass" 
+  #   command: [kong, migrations, bootstrap]
+  #   depends_on:
+  #     - kong-db
+  #   networks:
+  #     - kong-net
+  #   volumes:
+  #     - ./kong.yaml:/kong/declarative/kong.yml
+
+  kong-gateway:
+    image: kong:3.5
+    ports:
+      - 8000:8000
+      - 8443:8443
+      - 8001:8001
+      - 8444:8444
+      - 8002:8002
+      - 8445:8445
+      - 8003:8003
+      - 8004:8004
+    environment:
+      - "KONG_DATABASE=off"
+      - "KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yml"
+      - "KONG_PROXY_ACCESS_LOG=/dev/stdout" 
+      - "KONG_ADMIN_ACCESS_LOG=/dev/stdout" 
+      - "KONG_PROXY_ERROR_LOG=/dev/stderr" 
+      - "KONG_ADMIN_ERROR_LOG=/dev/stderr" 
+      - "KONG_ADMIN_LISTEN=0.0.0.0:8001" 
+      - "KONG_ADMIN_GUI_URL=http://localhost:8002"
+    # env_file:
+    #   - kong_gateway/.kong_secrets.env
+    # depends_on:
+    #   - kong-migrations
+    networks:
+      - kong-net
+    volumes:
+      - ./kong_gateway/kong.yaml:/kong/declarative/kong.yml
 
 
 volumes:
@@ -79,7 +148,9 @@ volumes:
   index_orthanc:
   index_backend:
 networks:
+  kong-net:
+    driver: bridge
   orthanc-db:
     driver: bridge
-  backend-db:
+  auth-db:
     driver: bridge
