--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -56,7 +56,7 @@ services:
       #   {"demo": "demo"}
       ORTHANC__AUTHENTICATION_ENABLED: "false"
       VERBOSE_ENABLED: "true"
-    # OSIMIS_WEB_VIEWER1_PLUGIN_ENABLED: "false"
+      OSIMIS_WEB_VIEWER1_PLUGIN_ENABLED: "false"
 
   auth:
     build: 
@@ -117,13 +117,13 @@ services:
     image: kong:3.5
     ports:
       - 8000:8000
-      - 8443:8443
-      - 8001:8001
-      - 8444:8444
-      - 8002:8002
-      - 8445:8445
-      - 8003:8003
-      - 8004:8004
+      # - 8443:8443
+      # - 8001:8001
+      # - 8444:8444
+      # - 8002:8002
+      # - 8445:8445
+      # - 8003:8003
+      # - 8004:8004
     environment:
       - "KONG_DATABASE=off"
       - "KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yml"
@@ -132,7 +132,7 @@ services:
       - "KONG_PROXY_ERROR_LOG=/dev/stderr" 
       - "KONG_ADMIN_ERROR_LOG=/dev/stderr" 
       - "KONG_ADMIN_LISTEN=0.0.0.0:8001" 
-      - "KONG_ADMIN_GUI_URL=http://localhost:8002"
+      # - "KONG_ADMIN_GUI_URL=http://localhost:8002"
     # env_file:
     #   - kong_gateway/.kong_secrets.env
     # depends_on:
