Made the separation between medic and patient in FE and also made a new endpoint for patients (work in progress)

--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -84,6 +84,7 @@ services:
       - "3000:3000"
     networks:
       - kong-net
+      - auth-db
     volumes:
       - ../Backend:/app
     command: nodemon /app/microservices/backend.ts
