--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -1,8 +1,12 @@
-version: '3.3'
+version: '3.9'
 
 services:
   db_orthanc:
     image: mariadb:10.6-focal
+    healthcheck:
+      test: ["CMD", "mariadb-admin" ,"ping", "-pmiv-root"]
+      timeout: 5s
+      retries: 10
     command:
       [
         mysqld,
@@ -16,10 +20,40 @@ services:
       MARIADB_PASSWORD: orthanc_pass
       MARIADB_USER: orthanc
       MARIADB_DATABASE: orthanc
-      MARIADB_ROOT_PASSWORD: foo-root
+      MARIADB_ROOT_PASSWORD: miv-root
+    
+  # this db is for patient -> studies link and doctor -> patients link
+  db_permissions:
+    image: mariadb:10.6-focal
+    healthcheck:
+      test: ["CMD", "mariadb-admin" ,"ping", "-pmiv-root"]
+      timeout: 5s
+      retries: 10
+    networks:
+      - permissions-db
+    command:
+      [
+        mysqld,
+        --default-authentication-plugin=ed25519,
+        --log-bin-trust-function-creators=1,
+      ]
+    volumes:
+      - "index_permissions:/var/lib/mariadb:Z"
+      - "./InitDBs/permissions.sql:/docker-entrypoint-initdb.d/initdb.sql"
+    environment:
+    # TODO: get these from env file and change them to not be
+    # identical to db_auth
+      MARIADB_PASSWORD: secure_miv
+      MARIADB_USER: miv
+      MARIADB_DATABASE: miv
+      MARIADB_ROOT_PASSWORD: miv-root
 
   db_auth:
     image: mariadb:10.6-focal
+    healthcheck:
+      test: ["CMD", "mariadb-admin" ,"ping", "-pmiv-root"]
+      timeout: 5s
+      retries: 10
     networks:
       - auth-db
     command:
@@ -30,7 +64,7 @@ services:
       ]
     volumes:
       - "index_backend:/var/lib/mariadb:Z"
-      - "./initdb.sql:/docker-entrypoint-initdb.d/initdb.sql"
+      - "./InitDBs/auth.sql:/docker-entrypoint-initdb.d/initdb.sql"
     environment:
     # TODO: get these from env file
       MARIADB_PASSWORD: secure_miv
@@ -39,28 +73,34 @@ services:
       MARIADB_ROOT_PASSWORD: miv-root
 
   orthanc:
-    image: osimis/orthanc:23.11.0
+    build:
+      context: ./orthanc
+      dockerfile: dockerfile_orthanc
+    image: orthanc-with-modules
     depends_on:
-      - db_orthanc
+      db_orthanc:
+          condition: service_healthy
+      db_permissions:
+          condition: service_healthy
+      db_auth:
+          condition: service_healthy
     ports: 
     # TODO: change this
       - "8042:8042"
-    # TODO: make this over the gateway
+    # TODO: make this go over the gateway
       - "4242:4242"
     networks:
       - orthanc-db
       - kong-net
-    environment:
-      ORTHANC__MYSQL__HOST: db_orthanc
-      ORTHANC__MYSQL__USERNAME: orthanc
-      ORTHANC__MYSQL__DATABASE: orthanc
-      ORTHANC__MYSQL__PASSWORD: orthanc_pass
-      # ORTHANC__REGISTERED_USERS: |
-      #   {"demo": "demo"}
-      ORTHANC__AUTHENTICATION_ENABLED: "false"
-      VERBOSE_ENABLED: "true"
-      # TODO: change this
-      OSIMIS_WEB_VIEWER1_PLUGIN_ENABLED: "true"
+      - auth-db
+      - permissions-db
+    volumes:
+      # - ./orthanc/configs/:/etc/orthanc/configs:ro
+      - ./orthanc/python-scripts/:/etc/orthanc/python-scripts/
+    # command: /etc/orthanc/configs
+    env_file:
+      - ./orthanc/.orthanc.env
+      
 
   auth:
     build: 
@@ -75,6 +115,9 @@ services:
     volumes:
       - ../Backend:/app
     command: nodemon /app/microservices/auth.ts
+    depends_on:
+      db_auth:
+        condition: service_healthy
   
   backend:
     build: 
@@ -89,43 +132,29 @@ services:
     volumes:
       - ../Backend:/app
     command: nodemon /app/microservices/backend.ts
-
-  # kong-db:
-  #   image: postgres:13
-  #   networks:
-  #     - kong-net
-  #   environment:
-  #     - "POSTGRES_USER=kong"
-  #     - "POSTGRES_DB=kong"
-  #     - "POSTGRES_PASSWORD=kongpass"
-
-  # kong-migrations:
-  #   image: kong:3.5
-  #   environment:
-  #     - "KONG_DATABASE=postgres"
-  #     - "KONG_PG_HOST=kong-db" 
-  #     - "KONG_PG_USER=kong"
-  #     - "KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yml"
-  #     - "KONG_PG_PASSWORD=kongpass" 
-  #   command: [kong, migrations, bootstrap]
-  #   depends_on:
-  #     - kong-db
-  #   networks:
-  #     - kong-net
-  #   volumes:
-  #     - ./kong.yaml:/kong/declarative/kong.yml
+  
+  permissions:
+    build: 
+      context: ..
+      dockerfile: Infra/dockerfile_backend
+    image: backend
+    env_file:
+      - .permissions.env
+    networks:
+      - permissions-db
+      - auth-db
+      - kong-net
+    volumes:
+      - ../Backend:/app
+    command: nodemon /app/microservices/permissions.ts
+    depends_on:
+      db_permissions:
+        condition: service_healthy
 
   kong-gateway:
     image: kong:3.5
     ports:
       - 8000:8000
-      # - 8443:8443
-      # - 8001:8001
-      # - 8444:8444
-      # - 8002:8002
-      # - 8445:8445
-      # - 8003:8003
-      # - 8004:8004
     environment:
       - "KONG_DATABASE=off"
       - "KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yml"
@@ -134,11 +163,6 @@ services:
       - "KONG_PROXY_ERROR_LOG=/dev/stderr" 
       - "KONG_ADMIN_ERROR_LOG=/dev/stderr" 
       - "KONG_ADMIN_LISTEN=0.0.0.0:8001" 
-      # - "KONG_ADMIN_GUI_URL=http://localhost:8002"
-    # env_file:
-    #   - kong_gateway/.kong_secrets.env
-    # depends_on:
-    #   - kong-migrations
     networks:
       - kong-net
     volumes:
@@ -149,10 +173,13 @@ volumes:
   storage:
   index_orthanc:
   index_backend:
+  index_permissions:
 networks:
   kong-net:
     driver: bridge
   orthanc-db:
     driver: bridge
   auth-db:
+    driver: bridge
+  permissions-db:
     driver: bridge
