--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -12,24 +12,27 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "eas-cli": "^5.9.3",
     "expo": "~49.0.15",
+    "expo-build-properties": "^0.8.3",
     "expo-file-system": "~15.4.5",
     "expo-image": "~1.3.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-navigation": "^7.37.1-hotfix.1",
     "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
