--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -20,6 +20,7 @@
     "expo-build-properties": "^0.8.3",
     "expo-file-system": "~15.4.5",
     "expo-image": "~1.3.5",
+    "expo-progress": "^0.0.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,12 +28,14 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-redash": "^18.1.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "typescript": "^5.1.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
