--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -34,7 +34,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-asset": "~8.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
