--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.20",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7"
   }
