--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,16 +3,20 @@
     "start": "nodemon backend.ts"
   },
   "dependencies": {
+    "dicom-parser": "^1.8.21",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.2",
     "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.5",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.20",
     "@types/nodemailer": "^6.4.14",
