--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -37,7 +37,8 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "typescript": "^5.1.3",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "expo-document-picker": "~11.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
