Added the upload study functionality with the protocol. Works nicely, still needs some security checks

--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -105,6 +105,7 @@ services:
       - auth-db
     volumes:
       - ../Backend:/app
+      - ../Common:/Common
     command: nodemon /app/microservices/account_data.ts
     depends_on:
       db_auth:
