--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,12 +3,14 @@
     "start": "nodemon backend.ts"
   },
   "dependencies": {
+    "dcmjs-dimse": "^0.1.27",
     "dicom-parser": "^1.8.21",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.2",
+    "node-stream-zip": "^1.15.0",
     "nodemailer": "^6.9.7",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.1",
