--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -19,16 +19,18 @@
     "expo": "~49.0.15",
     "expo-asset": "~8.10.1",
     "expo-build-properties": "^0.8.3",
+    "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-picker-select": "^9.0.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.3.0",
-    "react-native-redash": "^18.1.2",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -36,9 +38,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "typescript": "^5.1.3",
-    "expo-image-picker": "~14.3.2",
-    "expo-document-picker": "~11.5.4"
+    "socket.io-client": "^4.7.5",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
