--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
     "start": "nodemon backend.ts"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "dcmjs-dimse": "^0.1.27",
     "dicom-parser": "^1.8.21",
     "dotenv": "^16.3.1",
