all_studies endpoint in orthanc now works properly, still work in progress

--- a/Infra/kong_gateway/kong.yaml
+++ b/Infra/kong_gateway/kong.yaml
@@ -31,6 +31,7 @@ routes:
     strip_path: false
     paths:
       - /studies
+      - /all_studies
       - /series
       - /instances
       - /patients
