--- a/Infra/orthanc/dockerfile_orthanc
+++ b/Infra/orthanc/dockerfile_orthanc
@@ -3,4 +3,4 @@ FROM osimis/orthanc:23.11.0
 
 RUN apt-get update \
     && apt-get -yy install libmariadb-dev
-RUN pip3 install requests mariadb pyorthanc
+RUN pip3 install requests mariadb pyorthanc pydicom
