--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -39,7 +39,8 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.5",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
