--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -24,6 +25,7 @@
     "expo-image": "~1.3.5",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -39,11 +41,11 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.5",
-    "typescript": "^5.1.3",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.17.1",
     "@types/react": "~18.2.14"
   },
   "private": true
