--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-progress": "^5.0.1",
