--- a/Infra/dockerfile_backend
+++ b/Infra/dockerfile_backend
@@ -1,9 +1,14 @@
 FROM node:20.9.0
 
+RUN npm i -g tsx
+
 WORKDIR /app
-RUN npm i -g nodemon
 COPY "Backend" "/app"
+
+RUN rm -rf node_modules
+RUN npm i
+
 
 EXPOSE 3000
 
-# CMD [ "nodemon", "/app/microservices/backend.ts" ]
+ENTRYPOINT ["tsx"]
